# swebok-ai

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  NOTICE.md  PLAN.md  README.md  TODO.md  book-editor.md  book-writer.md  chapter-rewrite-dag.json  environment.md  index.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.obsidian/: app.json  community-plugins.json  core-plugins.json  workspace.json
00-introduction/: 05-publico-alvo-pre-requisitos.md  06-como-utilizar-guia.md  PLAN.md  README.md
00-pesquisa/: gas-town.md  integracao-praticas-engenharia-ia.md  reescrever-swebok-com-ia.md
01-software-requirements/: 03-especificacao-invariantes-contratos.md  07-ferramentas-tecnicas-modernas.md  PLAN.md  README.md
02-software-architecture/: 02-arquitetura-supervisao-controle.md  03-padroes-separacao-concerns-criticos.md  05-antropizacao-interfaces-experiencias.md  08-ferramentas-tecnicas-modernas.md  09-curadoria-arquitetural.md  README.md
03-software-design/: 02-principios-design-codigo-gerado.md  05-design-interfaces-contratos.md  06-design-verificabilidade.md  07-refatoracao-modernizacao-assistida.md
04-software-construction/: 02-pipeline-geracao-verificacao-integracao.md  03-gestao-qualidade-codigo-gerado.md  PLAN.md  README.md
05-software-testing/: 02-tecnicas-teste-codigo-gerado.md  05-avaliacao-validacao-agentes-autonomos.md  06-metricas-governanca-qualidade-testes.md  README.md
06-software-engineering-operations/: PLAN.md  README.md
07-software-maintenance/: README.md
XX-ideais/: gargalo.md
(+501 files in other folders)
