[project]
name = "09-swebok-ai-v5-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.70.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "mdformat>=0.7.0",
    "mdformat-gfm>=1.0.0",
    "mdformat-frontmatter>=2.0.0",
    "mdformat-footnote>=0.1.0",
    "markdownlint-cli>=0.44.0",
]

[tool.mdformat]
wrap = "80"
number = true
